# RD_Engine

./: CMakeLists.txt  README.md
applications/sandbox/: CMakeLists.txt  SandboxApp.cpp  triangle.vert
applications/sandbox/src/: ComponentUIRegistry.cpp  ComponentUIRegistry.h  EditorLayer.cpp  EditorLayer.h  SandboxLayer.cpp  SandboxLayer.h
applications/sandbox/src/systems/: CameraSystem.cpp  CameraSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h
applications/sandbox/src/ui/: ComponentUIRegistry.h  UIUtils.h
applications/test/: Application.cpp  Application.h  AssetViewerLayer.cpp  AssetViewerLayer.h  CMakeLists.txt  CameraControllerLayer.cpp  CameraControllerLayer.h  CameraControllers.cpp  CameraControllers.h  EditorLayer.cpp  EditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  Platform.cpp  Platform.h  SandboxApp.cpp  SandboxApp.h  TestSceneLayer.cpp  TestSceneLayer.h  VulkanLayer.cpp  VulkanLayer.h  main.cpp
applications/test/assets/: CMakeLists.txt
applications/test/components/: BoundingVolumeComponent.h  CameraComponent.h  TagComponent.h
applications/test/core/: AABB.h  ArcBallController.h  BoundingVolume.h  BoundingVolumeSystem.cpp  BoundingVolumeSystem.h  BoundingVolumeUtils.h  Camera.cpp  Camera.h  CameraControllers.h  CameraSystem.cpp  CameraSystem.h  CameraUtils.cpp  CameraUtils.h  Capsule.h  Hierarchy.h  HierarchySystem.cpp  HierarchySystem.h  HierarchyUtils.cpp  HierarchyUtils.h  Keyboard.h  Mouse.h  Plane.h  RenderSystem.cpp  RenderSystem.h  Segment.h  Sphere.h  SystemGraph.h  SystemScheduler.cpp  SystemScheduler.h  Transform.cpp  Transform.h  TransformSystem.cpp  TransformSystem.h  TransformUtils.cpp  TransformUtils.h
applications/test/events/: ApplicationEvent.h
applications/test/geometry/: Line.h  Triangle.h
applications/test/gpu/: CommandBuffer.h  Device.h
applications/test/systems/: BoundingVolumeSystem.cpp  BoundingVolumeSystem.h  CameraSystem.cpp  CameraSystem.h  GeometrySystem.h  HierarchySystem.cpp  HierarchySystem.h  RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp  TransformSystem.h
applications/test/utils/: BoundingVolumeUtils.cpp  BoundingVolumeUtils.h  CameraUtils.cpp  CameraUtils.h  HierarchyUtils.cpp  TransformUtils.cpp  TransformUtils.h
applications/test_vulkan/: CMakeLists.txt  TestVulkanApp.cpp
modules/assets/: CMakeLists.txt  README.md
modules/assets/config/: CMakeLists.txt  config.h.in
modules/assets/include/: AssetComponentTypes.h  AssetDatabase.h  AssetHandle.h  AssetManager.h  FileWatcher.h  MaterialAsset.h  MeshAsset.h  ShaderAsset.h  StbImageLoader.h  TextureAsset.h
modules/assets/include/assets/: AssetComponentTypes.h  AssetConcepts.h  AssetDatabase.h  AssetHandle.h  AssetManager.h  FileWatcher.h  GenerateDefaultTextures.h  ILoader.h  MaterialLoader.h  MaterialManifestLoader.h  MeshLoader.h  MeshMtlLoader.h  MeshObjLoader.h  PrefabLoader.h  ProgramLoader.h  ShaderDefLoader.h  ShaderLoader.h  StbImageLoader.h
modules/assets/include/internal/: AssetCreationReceipt.h  ThreadSafeQueue.h
modules/assets/src/: AssetManager.cpp  FileWatcher.cpp  MaterialLoader.cpp  MaterialManifestLoader.cpp  MeshMtlLoader.cpp  MeshObjLoader.cpp  ModelLoader.cpp  ShaderDefLoader.cpp  ShaderLoader.cpp  StbImage.cpp  TextureLoader.cpp
modules/common/: CMakeLists.txt
modules/common/include/: FileIO.h  Log.h
modules/common/src/: FileIO.cpp  Log.cpp
modules/core/: CMakeLists.txt
modules/core/include/: Application.h  Base.h  Components.h  Entity.h  EntryPoint.h  EnumFlags.h  FileIO.h  ISystem.h  ImGuiLayer.h  Input.h  InputCodes.h  Layer.h  LayerStack.h  Log.h  Scene.h  SceneSerializer.h  Serialization.h  Window.h
modules/core/include/Components/: TransformComponent.h
modules/core/include/ContextComponents/: MouseContextComponent.h  (+1 more)
modules/core/src/: Application.cpp  Entity.cpp  FileIO.cpp  FileIOUtils.cpp  ImGuiLayer.cpp  InputManager.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Platform.cpp  Scene.cpp  SceneSerializer.cpp
modules/engine/: CMakeLists.txt
modules/engine/include/: Application.h  ApplicationConfig.h  ApplicationContext.h  AssetManager.h  Base.h  Engine.h  Entity.h  EntryPoint.h  FrameContext.h  IAsset.h  IGraphicsDevice.h  ILayer.h  IRenderer.h  ISystem.h  IWindow.h  ImGuiLayer.h  Input.h  InputManager.h  JobSystem.h  LayerStack.h  Properties.h  RenderGraph.h  Scene.h  Ticker.h
modules/engine/src/: Application.cpp  Engine.cpp  FileIOUtils.cpp  InputManager.cpp  Scene.cpp
modules/geometry/: CMakeLists.txt
modules/platform/glfw/: CMakeLists.txt  GlfwInput.cpp  GlfwWindow.cpp  GlfwWindow.h
modules/platform/opengl/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLDebug.h  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
modules/platform/vulkan/: CMakeLists.txt
modules/renderer/: CMakeLists.txt
modules/renderer/include/: Buffer.h  Camera.h  CameraComponent.h  EditorCamera.h  GraphicsAPI.h  ICommandBuffer.h  IGraphicsDevice.h  IRenderPipeline.h  IRenderer.h  Mesh.h  OrthographicCamera.h  OrthographicCameraController.h  PerspectiveCamera.h  RenderCommand.h  RenderGraph.h  RenderGraphBuilder.h  RenderGraphPass.h  RenderGraphResource.h  RenderPacket.h  RenderPipelineManager.h  Renderer.h  Renderer2D.h  Renderer3D.h  RendererTypes.h  Shader.h  Texture.h  VertexArray.h
modules/renderer/src/: BufferUploadManager.cpp  EditorCamera.cpp  MaterialManager.cpp  Mesh.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  PerspectiveCamera.cpp  PipelineCache.cpp  RenderCommand.cpp  RenderPipelineManager.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  ShaderReflector.cpp
modules/scene/: CMakeLists.txt
modules/scene/src/: BoundingVolumeComponent.cpp  BoundingVolumeSystem.cpp  CameraComponent.cpp  CameraSystem.cpp  GeometrySystem.cpp  GpuGeometryUploadSystem.cpp  GpuMaterialInstanceSystem.cpp  HierarchyComponent.cpp  HierarchySystem.cpp  RenderPacketSystem.cpp  RenderSystem.cpp  Scene.cpp  SystemScheduler.cpp  TransformComponent.cpp  TransformSystem.cpp
(+300 files in other folders)
